# rusty-2048

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
assets/: script.js  tailwind.css
src/: main.rs
src/frontendcomponents/: mod.rs
src/game/: mod.rs
src/game/game_kernel/: mod.rs
src/game/game_variants/: mod.rs
src/game/game_variants/game_variant_0/: mod.rs
src/game/game_variants/game_variant_1/: mod.rs
src/game/rand_manager/: mod.rs
src/game/retainer_merger_variants/: mod.rs
src/game/retainer_merger_variants/retainer_merger_variant_0/: mod.rs
src/game/retainer_merger_variants/retainer_merger_variant_1/: mod.rs
