[package]
name = "2048 rust"
version = "0.2.0"
authors = ["jaafarbelhadj"]
edition = "2026"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
